/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.0.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    application
    java
    id("com.gradleup.shadow") version "9.3.0"
}

repositories {
    mavenCentral()

    maven {
        name = "papermc"
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }
    
    maven {
        name = "placeholderapi"
        url = uri("https://repo.extendedclip.com/releases/")
    }

    maven {
        name = "jitpack"
        url = uri("https://jitpack.io")
    }
}

dependencies {
    compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
    compileOnly("me.clip:placeholderapi:2.11.7")
    compileOnly("net.kyori:adventure-text-minimessage:4.17.0")
    compileOnly("net.kyori:adventure-text-serializer-legacy:4.17.0")
    compileOnly("com.github.LoneDev6:API-ItemsAdder:3.6.1")
    compileOnly("net.luckperms:api:5.4")

    implementation("org.xerial:sqlite-jdbc:3.44.1.0")
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

application {
    mainClass = "dev.indrajeeth.tpshield.TpShield"
}

val pluginVersion: String = file("src/main/resources/plugin.yml")
    .readLines()
    .find { it.startsWith("version:") }
    ?.removePrefix("version:")
    ?.trim() ?: "1.0.0"

tasks.shadowJar {
  archiveBaseName.set("TpShield")
  archiveClassifier.set("")
  archiveVersion.set(pluginVersion)

  manifest {
    attributes["paperweight-mappings-namespace"] = "spigot"
  }
}

tasks.build {
  dependsOn(tasks.shadowJar)
}